[package]
name = "dedup_bpf"
version = "0.1.0"
authors = ["samkim-crypto <skim13@cs.stanford.edu>"]
edition = "2021"

[dependencies]
solana-program = "1.14.7"
borsh = "0.9.3"
fxhash = "0.2.1"

[dev-dependencies]
solana-program-test = "1.14.7"
solana-sdk = "1.14.7"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
